[gd_scene load_steps=2 format=3 uid="uid://dcl16c2s7xdq3"]

[ext_resource type="Script" uid="uid://uasnb856jeuq" path="res://ui/friend/pending_list_item.gd" id="1_h2jae"]

[node name="PendingListItem" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h2jae")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AvatarRequest" type="HTTPRequest" parent="HBoxContainer"]

[node name="AvatarTexture" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "請求者名稱"

[node name="InfoLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "向你發送了好友邀請"

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AcceptButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "接受"

[node name="DeclineButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "拒絕"
